[workspace]
resolver = "2"
members = [
  "compiler/danubec_ast",
  "compiler/danubec_diagnostic",
  "compiler/danubec_lex",
  "compiler/danubec_parse",
  "compiler/danubec_syntax",
  "compiler/danubec",
]

[workspace.dependencies]
drop_bomb = "0.1.5"
insta = "1.43.2"
miette = { version = "7.6.0", features = ["fancy"] }
once_cell = "1.21.3"
rowan = "0.16.1"
unicode-ident = "1.0.19"
