[package]
name = "danube-hir-lowering"
version = "0.1.0"
authors = ["Danuel <public.danuel@gmail.com>"]
edition = "2018"

[dependencies]
danube-ast = { path = "../danube-ast" }
danube-hir = { path = "../danube-hir" }
danube-lex = { path = "../danube-lex" }
danube-parse = { path = "../danube-parse" }
