[package]
name = "danubec_ast_lowering"
version = "0.1.0"
edition = "2024"

[dependencies]
danubec_diagnostic.path = "../danubec_diagnostic"
danubec_parse.path = "../danubec_parse"
danubec_syntax.path = "../danubec_syntax"
indexmap.workspace = true
insta.workspace = true
miette.workspace = true
slotmap.workspace = true
