[package]
name = "danubec_compile"
version = "0.1.0"
edition = "2021"

[dependencies]
danubec_ast.path = "../danubec_ast"
danubec_data_structure.path = "../danubec_data_structure"
danubec_diagnostic.path = "../danubec_diagnostic"
danubec_middle.path = "../danubec_middle"
danubec_parse.path = "../danubec_parse"
glob.workspace = true
