[package]
name = "danube-ast"
version = "0.1.0"
authors = ["Danuel <public.danuel@gmail.com>"]
edition = "2018"

[dependencies]
danube-token = { path = "../danube-token" }
danube-index = { path = "../danube-index" }

[build-dependencies]
convert_case = "0.5.0"
proc-macro2 = "1.0.36"
syn = { version = "1.0.86", features = ["full"] }
quote = "1.0.15"
