[package]
name = "danube-name-resolution"
version = "0.1.0"
authors = ["Danuel <public.danuel@gmail.com>"]
edition = "2021"

[dependencies]
danube-ast = { path = "../danube-ast" }
danube-diagnostics = { path = "../danube-diagnostics" }
danube-token = { path = "../danube-token" }
danube-dependency-graph = { path = "../danube-dependency-graph" }
