[package]
name = "danube-parse"
version = "0.1.0"
authors = ["Danuel <public.danuel@gmail.com>"]
edition = "2018"

[dependencies]
danube-ast = { path = "../danube-ast" }
danube-diagnostics = { path = "../danube-diagnostics" }
danube-index = { path = "../danube-index" }
danube-lex = { path = "../danube-lex" }
danube-span = { path = "../danube-span" }
danube-token = { path = "../danube-token" }
